--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -63,6 +63,34 @@
 
             -->
 
+            <button class="btn btn-block btn-primary" data-toggle="collapse" data-target="#demo">Start Exam</button>
+
+            <div id="demo" class="collapse">
+                <form id="questionform" action="{% url 'onlinecourse:exam_submission' course.id %}" method="post">
+                    {% csrf_token %}
+                    {% for question in course.question_set.all %}
+                    <div class="card-columns-vertical">
+                        <div class="card mt-1">
+                            <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                            <div class="form-group">
+                            {% for choice in question.choice_set.all %}
+                                <div class="form-check">
+                                    <label class="form-check-label">
+                                        <input type="checkbox" name="choice_{{choice.id}}"
+                                            class="form-check-input" id="{{choice.id}}"
+                                            value="{{choice.id}}">{{ choice.choice_content }}
+                                    </label>
+                                </div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    {% endfor %}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
+        </form>
+
+            </div>
+
             <!-- <HINT> If user is authenticated, show course exam with a list of question -->
 
             <!-- <HINT> Each example will have many questions -->
